# vkg_gen

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TASKS
cmake/: vkgGenerate.cmake
examples/cmake_integration/: CMakeLists.txt  main.cpp  sample.cfg
examples/rotating_triangle/: .gitignore  CMakeLists.txt  Makefile  README.md  shader_rotating.vert  triangle.cfg  vkg_triangle.cpp
src/: arena.cpp  arena.hpp  config.cpp  config.hpp  debug_macros.h  main.cpp  xml_parser.cpp  xml_parser.hpp
src/generator/: boilerplate.hpp  generator.cpp  generator.hpp
src/xml/: lex_token_formater.hpp  lex_token_formatter.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  xml.cpp  xml.hpp
tests/compiling/: .gitignore  cleanup.sh  run_local_tests.sh  run_matrix.sh  setup_matrix.sh
windows_release/: CMakeLists.txt  README.md  vkgen.rc
